[gd_scene load_steps=5 format=3 uid="uid://rd3v4m4jrx63"]

[ext_resource type="Script" path="res://card_combat_view.gd" id="1_4wd61"]
[ext_resource type="Texture2D" uid="uid://cg33q8v4s7p0c" path="res://Assets/Cards/Borders/cardborder.png" id="2_aa80t"]
[ext_resource type="Texture2D" uid="uid://cy1ij6ipxxpw6" path="res://Assets/Cards/Misc/SkillBackground.png" id="2_jj5qt"]
[ext_resource type="Texture2D" uid="uid://6hbj7cg7i32" path="res://Assets/Cards/Misc/LevelBackground.png" id="3_w4skc"]

[node name="CardCombatView" type="MarginContainer"]
offset_right = 354.0
offset_bottom = 476.0
script = ExtResource("1_4wd61")

[node name="Card" type="Sprite2D" parent="."]
centered = false

[node name="Border" type="Sprite2D" parent="."]
texture = ExtResource("2_aa80t")
centered = false

[node name="CardBars" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopMargin" type="MarginContainer" parent="CardBars"]
custom_minimum_size = Vector2(254, 10)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TopBar" type="HBoxContainer" parent="CardBars"]
custom_minimum_size = Vector2(254, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LeftMargin" type="MarginContainer" parent="CardBars/TopBar"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="TypeIcon" type="MarginContainer" parent="CardBars/TopBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TypeIconSprite" type="Sprite2D" parent="CardBars/TopBar/TypeIcon"]
centered = false

[node name="MidSectionEmptySpace" type="MarginContainer" parent="CardBars"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2

[node name="Skill3" type="RichTextLabel" parent="CardBars"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/outline_size = 6
bbcode_enabled = true
text = "[right][color=#000000]PLACEHOLDER 3[/color][/right]"
scroll_active = false

[node name="Skill2" type="RichTextLabel" parent="CardBars"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/outline_size = 6
bbcode_enabled = true
text = "[right][color=#000000]PLACEHOLDER 2[/color][/right]"
scroll_active = false

[node name="Skill1" type="RichTextLabel" parent="CardBars"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/outline_size = 6
bbcode_enabled = true
text = "[right][color=#000000]PLACEHOLDER 1[/color][/right]"
scroll_active = false

[node name="ATKRow" type="HBoxContainer" parent="CardBars"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CardBars/ATKRow"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="ATK" type="MarginContainer" parent="CardBars/ATKRow"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="ATKBackground" type="Sprite2D" parent="CardBars/ATKRow/ATK"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_jj5qt")
centered = false
offset = Vector2(-50, 0)

[node name="ATKLabel" type="Label" parent="CardBars/ATKRow/ATK"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 18

[node name="LvHPRow" type="HBoxContainer" parent="CardBars"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CardBars/LvHPRow"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Level" type="MarginContainer" parent="CardBars/LvHPRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="LevelBackground" type="Sprite2D" parent="CardBars/LvHPRow/Level"]
scale = Vector2(0.057, 0.057)
texture = ExtResource("3_w4skc")
centered = false

[node name="LevelLabel" type="Label" parent="CardBars/LvHPRow/Level"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 18

[node name="MarginContainer" type="MarginContainer" parent="CardBars/LvHPRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="HP" type="MarginContainer" parent="CardBars/LvHPRow"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="HPBackground" type="Sprite2D" parent="CardBars/LvHPRow/HP"]
position = Vector2(-4, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_jj5qt")
centered = false
offset = Vector2(-50, 0)

[node name="HPLabel" type="Label" parent="CardBars/LvHPRow/HP"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 18
